# jroots.co

./: .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.prod.yml  renovate.json  run-tests.sh
.claude/commands/: bunny-cdn.md  census-pipeline.md  dazho-orders.md
.cursor/skills/bunny-cdn/: SKILL.md
.cursor/skills/census-pipeline/: SKILL.md
.cursor/skills/dazho-orders/: SKILL.md
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  auth.py  config.py  crud.py  database.py  entrypoint.sh  image_utils.py  logging_config.py  logging_middleware.py  main.py  models.py  pyproject.toml  pytest.ini  resend_service.py  schemas.py  trace_context.py
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_add_image_file_paths_and_email_index.py  003_drop_username_unique.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  image.py  search_object.py  user.py
backend/app/routers/: admin.py  auth.py  images.py  search.py  telegram.py
backend/app/schemas/: __init__.py  image.py  search.py  telegram.py  user.py
backend/app/services/: auth.py  email.py  image.py  telegram.py
backend/app/utils/: logging_config.py
backend/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_health.py  test_api_images.py  test_api_search.py  test_api_telegram.py  test_auth_service.py  test_auth_utils.py  test_email_sender.py  test_image_ops.py  test_image_service.py  test_image_watermark.py  test_telegram_service.py
cli/: benchmark_gemini.py  benchmark_qwen.py  cases_to_wiki.py  census_pipeline.py  dazho_603_cases_to_order.md  dazho_603_list.txt  dazho_6684_cases.md  dazho_680_1_4_analysis.md  dazho_chinsh_findings.md  dazho_pre1917_jewish_cases.md  dazho_pre1917_jewish_funds.md  dazho_rags_priorities.md  dazho_source_matrix.md  dazho_soviet_jewish_funds.md  detect_rows.py  download_case.py  export_fio.py  fill_dazho_order.py  finalize_ledger.py  gemini3_all_cards.py  jroots_co.py  ledger_review_server.py  make_council_review.py  process_census.py  process_council.py  process_ledger.py  process_shpykiv.py  pyproject.toml  review.html  review_server.py  slice_pdf.py  test_extraction.py
cli/jroots_cli/: api_client.py  csv_utils.py  main.py  reporter.py
cli/jroots_cli/commands/: login.py  sources.py  status.py  upload.py  validate.py
cli/tests/: test_api_client.py  test_commands.py  test_csv_utils.py  test_reporter.py
db/: docker-compose.yaml  init.sql
docs/plans/: 2026-03-13-password-reset-design.md
e2e/: playwright.config.ts
e2e/tests/: auth.spec.ts  health.spec.ts  search.spec.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts  paginate.ts
frontend/src/api/__tests__/: api.test.ts  paginate.test.ts
frontend/src/components/: AdminDashboard.tsx  AdminLogin.tsx  ForgotPasswordForm.tsx  LoginForm.tsx  RegisterForm.tsx  ResetPasswordForm.tsx  SearchPage.tsx  User.tsx  VerifyPage.tsx
frontend/src/components/shared/: ImagePopup.tsx  LoadingOverlay.tsx  Pagination.tsx  StatusMessage.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/hooks/__tests__/: useAuth.test.tsx
frontend/src/types/: api.d.ts  auth.ts
