[tool.poetry]
name = "jroots-backend"
version = "0.2.0"
description = "Backend for Jewish OCR Search"
authors = ["Michael Akushsky <michael.akushsky@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
sqlalchemy = "^2.0.28"
asyncpg = "^0.30.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.22"
Pillow = "^12.1.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "4.0.1"
httpx = "^0.28.0"
tenacity = "^8.2.2"
certifi = "^2024.9.14"
python-logging-loki = "^0.3.1"
python-json-logger = "^3.3.0"
colorlog = "^6.7.0"
alembic = "^1.13.0"
slowapi = "^0.1.9"
gunicorn = "^25.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.54.0"}
aiosqlite = "^0.20.0"
cryptography = ">=46.0.7"
starlette = ">=0.49.1"
pyasn1 = ">=0.6.3"
pygments = ">=2.20.0"
requests = ">=2.33.0"
ecdsa = ">=0.19.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.0"
ruff = ">=0.8.0"
mypy = "^1.5.0"
pre-commit = "^3.0.0"
black = "^26.3.0"
respx = "^0.22.0"
greenlet = "^3.3.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/utils/logging_config.py", "alembic/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]
