[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jroots-cli"
version = "0.1.0"
description = "CLI tools for interacting with the JRoots API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tqdm>=4.64",
    "tenacity>=8.0",
]

[project.scripts]
jroots = "jroots_cli.main:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["jroots_cli*"]
